--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<html lang="fr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title>pLog</title>
+    <title>Logs</title>
   </head>
   <body>
     <%= yield %>
