Ajout et modifications CSS

--- a/views/accueil.erb
+++ b/views/accueil.erb
@@ -1,4 +1,13 @@
-<h1>Identification</h1>
-<p>Vous êtes :</p>
-<a href="/visiteur">Visiteur</a>
-<a href="/identification">Administrateur</a>
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="accueil">
+				<h1>PLOG</h1>
+				<p class="description">LISTEZ VOS LOGS</p>
+				<a class="btn btn-danger" href="/visiteur">Lire les derniers logs</a>
+				<p></p>
+				<a class="btn btn-default" href="/identification">Login</a>
+			</div>
+		</div>
+	</div>
+</div>
