--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,8 +1,18 @@
-<html>
-  <head>
-    <title>Logs</title>
-  </head>
-  <body>
-    <%= yield %>
-  </body>
+<!DOCTYPE html>
+<html lang="fr">
+	
+	<head>
+		<link href="css/bootstrap.css" rel="stylesheet">
+		<link href="css/bootstrap-responsive.css" rel="stylesheet">
+		<link href="css/main.css" rel="stylesheet">
+		
+		<meta charset="utf-8">
+
+		<title>PLOG</title>
+	</head>
+	
+	<body>
+		<%= yield %>	
+	</body>
+
 </html>
