--- a/views/accueil.erb
+++ b/views/accueil.erb
@@ -1,12 +1,12 @@
 <div class="container">
 	<div class="row">
-		<div class="col-md-12">
+		<div class="col-md-6 col-md-offset-3">
 			<div class="accueil">
 				<h1>PLOG</h1>
-				<p class="description">LISTEZ VOS LOGS</p>
+				<p class="description">Application pour gérer vos logs</p>
 				<a class="btn btn-danger" href="/visiteur">Lire les derniers logs</a>
 				<p></p>
-				<a class="btn btn-default" href="/identification">Login</a>
+				<a class="btn btn-default btn_acc" href="/identification">Login</a>
 			</div>
 		</div>
 	</div>
